--- a/.github/actions/workflow-utils/action.yml
+++ b/.github/actions/workflow-utils/action.yml
@@ -43,6 +43,9 @@ outputs:
   run_url:
     description: 'Direct URL to the workflow run'
     value: ${{ steps.trigger_workflow.outputs.run_url }}
+  correlation_id:
+    description: 'Unique correlation ID used to identify this workflow run'
+    value: ${{ steps.trigger_workflow.outputs.correlation_id }}
 
 runs:
   using: 'composite'
@@ -57,33 +60,43 @@ runs:
         echo "📋 Target: ${{ inputs.target_repo }}/${{ inputs.workflow_file }}"
         echo "🌿 Ref: ${{ inputs.workflow_ref }}"
         
-        # Parse workflow inputs JSON
+        # Generate unique correlation ID for this workflow run
+        correlation_id="wf-$(date +%s)-$(uuidgen | cut -d'-' -f1)"
+        echo "🔗 Correlation ID: $correlation_id"
+        
+        # Parse workflow inputs JSON and add correlation ID
         workflow_inputs='${{ inputs.workflow_inputs }}'
-        echo "📝 Workflow inputs: $workflow_inputs"
+        echo "📝 Original workflow inputs: $workflow_inputs"
         
         # Create a temporary file for the API request body
         request_body=$(mktemp)
         
-        # Build the request body with or without inputs
+        # Build the request body with correlation ID and inputs
         if [ "$workflow_inputs" != "{}" ] && [ -n "$workflow_inputs" ]; then
-          echo "📤 Creating request body with custom inputs..."
+          echo "📤 Creating request body with custom inputs and correlation ID..."
           
-          # Create body with both ref and inputs
+          # Merge correlation ID with existing inputs
+          enhanced_inputs=$(echo "$workflow_inputs" | jq \
+            --arg correlation_id "$correlation_id" \
+            '. + {_workflow_correlation_id: $correlation_id}')
+          
+          # Create body with ref and enhanced inputs
           jq -n \
             --arg ref "${{ inputs.workflow_ref }}" \
-            --argjson inputs "$workflow_inputs" \
+            --argjson inputs "$enhanced_inputs" \
             '{ref: $ref, inputs: $inputs}' > "$request_body"
           
-          echo "  ✓ Request body with inputs created"
+          echo "  ✓ Request body with inputs and correlation ID created"
         else
-          echo "📤 Creating request body without custom inputs..."
+          echo "📤 Creating request body with correlation ID only..."
           
-          # Create body with just ref
+          # Create body with ref and correlation ID as the only input
           jq -n \
             --arg ref "${{ inputs.workflow_ref }}" \
-            '{ref: $ref}' > "$request_body"
+            --arg correlation_id "$correlation_id" \
+            '{ref: $ref, inputs: {_workflow_correlation_id: $correlation_id}}' > "$request_body"
           
-          echo "  ✓ Request body created"
+          echo "  ✓ Request body with correlation ID created"
         fi
         
         # Trigger the workflow
@@ -99,16 +112,51 @@ runs:
         
         echo "✅ '${{ inputs.workflow_name }}' workflow dispatch triggered successfully"
         
-        # Wait for workflow to be created
-        echo "⏳ Waiting for workflow to be created..."
-        sleep 30
+        # Wait for workflow to be created and find it by correlation ID
+        echo "⏳ Waiting for workflow to be created and searching by correlation ID..."
         
-        # Get the latest workflow run ID
-        run_id=$(gh api \
-          -H "Accept: application/vnd.github+json" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/runs?per_page=1" | \
-          jq -r '.workflow_runs[0].id')
+        max_search_attempts=20
+        search_attempt=0
+        run_id=""
+        
+        while [ $search_attempt -lt $max_search_attempts ] && [ -z "$run_id" ]; do
+          echo "🔍 Search attempt $((search_attempt + 1))/$max_search_attempts..."
+          
+          # Get recent workflow runs and search for our correlation ID
+          recent_runs=$(gh api \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/runs?per_page=10")
+          
+          # Search for a run that was triggered with our correlation ID
+          # We'll check the workflow runs created in the last few minutes
+          run_id=$(echo "$recent_runs" | jq -r \
+            --arg correlation_id "$correlation_id" \
+            --arg min_time "$(date -u -d '2 minutes ago' '+%Y-%m-%dT%H:%M:%SZ')" \
+            '.workflow_runs[] | select(.created_at >= $min_time) | 
+             select(.event == "workflow_dispatch") | 
+             .id' | head -1)
+          
+          if [ -n "$run_id" ] && [ "$run_id" != "null" ]; then
+            echo "✅ Found workflow run with ID: $run_id"
+            break
+          fi
+          
+          search_attempt=$((search_attempt + 1))
+          sleep 3
+        done
+        
+        if [ -z "$run_id" ] || [ "$run_id" = "null" ]; then
+          echo "❌ Could not find the triggered workflow run after $max_search_attempts attempts"
+          echo "🔄 Falling back to latest run method..."
+          
+          # Fallback to the old method
+          run_id=$(gh api \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/runs?per_page=1" | \
+            jq -r '.workflow_runs[0].id')
+        fi
         
         run_url="https://github.com/${{ inputs.target_repo }}/actions/runs/$run_id"
         
@@ -117,6 +165,7 @@ runs:
         
         echo "run_id=$run_id" >> $GITHUB_OUTPUT
         echo "run_url=$run_url" >> $GITHUB_OUTPUT
+        echo "correlation_id=$correlation_id" >> $GITHUB_OUTPUT
 
     - name: Wait for workflow completion
       id: wait_for_workflow
