--- a/.github/actions/workflow-utils/action.yml
+++ b/.github/actions/workflow-utils/action.yml
@@ -101,63 +101,109 @@ runs:
           echo "  ✓ Request body with correlation ID created"
         fi
         
-        # Trigger the workflow
-        gh api \
+        # Trigger the workflow (with error handling for correlation ID rejection)
+        echo "🚀 Attempting to trigger workflow with correlation ID..."
+        
+        trigger_result=$(gh api \
           --method POST \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           --input "$request_body" \
-          "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/dispatches"
+          "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/dispatches" 2>&1 || echo "TRIGGER_FAILED")
+        
+        # Check if correlation ID was rejected and fall back if needed
+        if [[ "$trigger_result" == *"Unexpected inputs provided"* ]] && [[ "$trigger_result" == *"_workflow_correlation_id"* ]]; then
+          echo "⚠️  Target workflow doesn't accept correlation ID input. Falling back to standard trigger..."
+          
+          # Create new request body without correlation ID
+          if [ "$workflow_inputs" != "{}" ] && [ -n "$workflow_inputs" ]; then
+            echo "$workflow_inputs" | jq \
+              --arg ref "${{ inputs.workflow_ref }}" \
+              '{ref: $ref, inputs: .}' > "$request_body"
+          else
+            jq -n --arg ref "${{ inputs.workflow_ref }}" '{ref: $ref}' > "$request_body"
+          fi
+          
+          # Retry without correlation ID
+          gh api \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            --input "$request_body" \
+            "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/dispatches"
+          
+          echo "✅ '${{ inputs.workflow_name }}' workflow triggered without correlation ID"
+          correlation_tracking="disabled"
+          
+        elif [[ "$trigger_result" == *"TRIGGER_FAILED"* ]]; then
+          echo "❌ Failed to trigger workflow:"
+          echo "$trigger_result"
+          rm -f "$request_body"
+          exit 1
+        else
+          echo "✅ '${{ inputs.workflow_name }}' workflow triggered with correlation ID"
+          correlation_tracking="enabled"
+        fi
         
         # Clean up
         rm -f "$request_body"
         
-        echo "✅ '${{ inputs.workflow_name }}' workflow dispatch triggered successfully"
-        
-        # Wait for workflow to be created and find it by correlation ID
-        echo "⏳ Waiting for workflow to be created and searching by correlation ID..."
-        
-        max_search_attempts=20
-        search_attempt=0
-        run_id=""
-        
-        while [ $search_attempt -lt $max_search_attempts ] && [ -z "$run_id" ]; do
-          echo "🔍 Search attempt $((search_attempt + 1))/$max_search_attempts..."
+        # Find the triggered workflow run
+        if [ "$correlation_tracking" = "enabled" ]; then
+          echo "⏳ Waiting for workflow to be created and searching by correlation ID..."
           
-          # Get recent workflow runs and search for our correlation ID
-          recent_runs=$(gh api \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/runs?per_page=10")
+          max_search_attempts=20
+          search_attempt=0
+          run_id=""
           
-          # Search for a run that was triggered with our correlation ID
-          # We'll check the workflow runs created in the last few minutes
-          run_id=$(echo "$recent_runs" | jq -r \
-            --arg correlation_id "$correlation_id" \
-            --arg min_time "$(date -u -d '2 minutes ago' '+%Y-%m-%dT%H:%M:%SZ')" \
-            '.workflow_runs[] | select(.created_at >= $min_time) | 
-             select(.event == "workflow_dispatch") | 
-             .id' | head -1)
+          while [ $search_attempt -lt $max_search_attempts ] && [ -z "$run_id" ]; do
+            echo "🔍 Search attempt $((search_attempt + 1))/$max_search_attempts..."
+            
+            # Get recent workflow runs and search for our correlation ID
+            recent_runs=$(gh api \
+              -H "Accept: application/vnd.github+json" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/runs?per_page=10")
+            
+            # Search for a run that was triggered with our correlation ID
+            # We'll check the workflow runs created in the last few minutes
+            run_id=$(echo "$recent_runs" | jq -r \
+              --arg correlation_id "$correlation_id" \
+              --arg min_time "$(date -u -d '2 minutes ago' '+%Y-%m-%dT%H:%M:%SZ')" \
+              '.workflow_runs[] | select(.created_at >= $min_time) | 
+               select(.event == "workflow_dispatch") | 
+               .id' | head -1)
+            
+            if [ -n "$run_id" ] && [ "$run_id" != "null" ]; then
+              echo "✅ Found workflow run with correlation ID: $run_id"
+              break
+            fi
+            
+            search_attempt=$((search_attempt + 1))
+            sleep 3
+          done
           
-          if [ -n "$run_id" ] && [ "$run_id" != "null" ]; then
-            echo "✅ Found workflow run with ID: $run_id"
-            break
+          if [ -z "$run_id" ] || [ "$run_id" = "null" ]; then
+            echo "❌ Could not find workflow run by correlation ID after $max_search_attempts attempts"
+            echo "🔄 Falling back to latest run method..."
+            correlation_tracking="disabled"
           fi
-          
-          search_attempt=$((search_attempt + 1))
-          sleep 3
-        done
+        fi
         
-        if [ -z "$run_id" ] || [ "$run_id" = "null" ]; then
-          echo "❌ Could not find the triggered workflow run after $max_search_attempts attempts"
-          echo "🔄 Falling back to latest run method..."
+        # If correlation tracking is disabled or failed, use latest run method
+        if [ "$correlation_tracking" = "disabled" ]; then
+          echo "📋 Using latest run method to find triggered workflow..."
           
-          # Fallback to the old method
+          # Wait a moment for the workflow to appear
+          sleep 5
+          
           run_id=$(gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/runs?per_page=1" | \
             jq -r '.workflow_runs[0].id')
+          
+          echo "✅ Found latest workflow run: $run_id"
         fi
         
         run_url="https://github.com/${{ inputs.target_repo }}/actions/runs/$run_id"
@@ -168,6 +214,7 @@ runs:
         echo "run_id=$run_id" >> $GITHUB_OUTPUT
         echo "run_url=$run_url" >> $GITHUB_OUTPUT
         echo "correlation_id=$correlation_id" >> $GITHUB_OUTPUT
+        echo "correlation_tracking=$correlation_tracking" >> $GITHUB_OUTPUT
 
     - name: Wait for workflow completion
       id: wait_for_workflow
