chore: update source configuration fixtures

--- a/packages/sanity-suite/__fixtures__/sourceConfig1.json
+++ b/packages/sanity-suite/__fixtures__/sourceConfig1.json
@@ -382,7 +382,9 @@
                 }
               ]
             }
-          ]
+          ],
+          "sdkBaseUrl": "https://www.googletagmanager.com",
+          "serverContainerUrl": ""
         },
         "destinationDefinitionId": "1mQ0yXGAQM08MTdVxws7ENIPjYS",
         "destinationDefinition": {
